# Contab_2

./: carga.ts  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src/app/: App.tsx
src/assets/: logo.tsx  logoBusqueda.tsx  products.json
src/components/main/account/: account.tsx  iconSeti.tsx  iconUser.tsx
src/components/main/mains/facturacion/: facturacion.tsx
src/components/main/mains/facturacion/factura/: facturaboleta.tsx  styles.css
src/components/main/mains/facturacion/mainfacturacion/: facturacion.css  facturacion.tsx
src/components/main/mains/facturacion/productos/: card.tsx  menor.tsx  productos.css  productos.tsx
src/components/titlebar/: titlebar.module.css  titlebar.tsx
src/componets/main/account/: account.tsx  iconSeti.tsx  iconUser.tsx
src/componets/main/main/: main.css  main.tsx
src/componets/main/mains/facturacion/: facturacion.css  facturacion.tsx
src/componets/main/mains/facturacion/factura/: facturaboleta.tsx  fecha.ts  styles.css
src/componets/main/mains/facturacion/mainfacturacion/: facturacion.tsx
src/componets/main/mains/facturacion/productos/: productos.css  productos.tsx
src/componets/titlebar/: navFacturacion.tsx  titlebar.module.css  titlebar.tsx
src/icons/: logoBusqueda.tsx  logoclose.tsx  logomaximize.tsx  logominimize.tsx
src/styles/: App.css
