[package]
name = "contab2"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tauri-plugin-cli = "2"
serde_json = "1"
actix-web = "4.5.1"
window-shadows = "0.2"
window-vibrancy = "0.3"
tauri-plugin-shell = "2.0.0-beta.3"

[features]
default = ["custom-protocol"]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
